--- a/index.html
+++ b/index.html
@@ -1,10 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Title of the document</title>
-  </head>
-  <body>
-    <h1>PDF Example</h1>
-    <p>Open a PDF file <a href="https://github.com/andreweyles/cv/blob/main/CV-complete.pdf">example</a>.</p>
-  </body>
-</html>
+<embed src="https://github.com/andreweyles/cv/blob/main/CV-complete.pdf" width="100%" height="850px"/>
+
