--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<embed src="https://github.com/andreweyles/cv/blob/main/CV-complete.pdf" width="100%" height="850px"/>
+<html>
+<body>
 
+</body>
+<script type="text/javascript">
+    document.location = "https://github.com/andreweyles/cv/blob/main/CV-complete.pdf"
+</script>
+</html>
