--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
 </body>
 <script type="text/javascript">
-    document.location = "https://github.com/andreweyles/cv/blob/main/CV-complete.pdf"
+    document.location = "CV-complete.pdf"
 </script>
 </html>
